--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@antora/cli": "^2.3",
-        "@antora/site-generator-default": "^2.3"
+        "@antora/site-generator-default": "^2.3",
+        "asciidoctor-emoji": "^0.2.1"
     }
 }
