--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -9,7 +9,7 @@ content:
     braches: HEAD
 ui: 
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
+    url: ./uibundle/ui-bundle.zip
     snapshot: true
   supplemental_files:
   - path: .nojekyll
