--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -4,3 +4,6 @@ version: 3.3
 start_page: ROOT:documentation.adoc
 nav:
   - modules/ROOT/nav.adoc
+asciidoc:
+  attributes:
+    link-javadoc: "https://javadoc.jmonkeyengine.org/v3.3.2-stable/index.html?"
