Revert "Try fix meta info, again"
This reverts commit 065af590f30ed3cf17c27f3cc36bf4d20efc09a5.

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,7 +1,7 @@
 site:
   title: jMonkeyEngine Documentation
   start_page: jme::documentation.adoc 
-  url: https://8keep.github.io/
+  url: https://8keep.github.io/wikidemo-antora
 content:
   sources: 
   - url: ./
